# isi-tehnology-test

./: .dockerignore  .example.env  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: mydatabase_dump.sql
app/app/: loguru_config.py  middleware.py  settings.py  urls.py
app/base/: admin.py  models.py  serializers.py  views.py
app/base/migrations/: 0001_initial.py
app/chat/: admin.py  forms.py  models.py  serializers.py  views.py
app/chat/migrations/: 0001_initial.py  0002_message.py
config/docker/: Dockerfile  nginx.dockerfile
config/nginx/: .gitignore
